fix: 修复已知问题 | 修改包名